--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "typecheck": "tsc --p . --noEmit"
   },
   "dependencies": {
+    "@types/ioredis": "^4.28.7",
     "@types/styled-system": "^5.1.15",
     "ethers": "^5.5.3",
+    "ioredis": "^4.28.3",
     "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
     "next": "12.0.8",
@@ -22,6 +24,7 @@
     "rxjs": "^7.5.2",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
+    "swr": "^1.2.0",
     "wagmi": "^0.2.0"
   },
   "devDependencies": {
