--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "w3bbz",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +10,16 @@
     "typecheck": "tsc --p . --noEmit"
   },
   "dependencies": {
-    "@types/ioredis": "^4.28.7",
-    "@types/styled-system": "^5.1.15",
     "ethers": "^5.5.3",
     "ioredis": "^4.28.3",
-    "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
     "next": "12.0.8",
     "next-i18next": "^10.2.0",
     "next-pwa": "^5.4.4",
+    "qrcode-generator": "^1.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-use": "^17.3.2",
-    "rxjs": "^7.5.2",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
     "swr": "^1.2.0",
@@ -31,6 +29,8 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.20",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@types/ioredis": "^4.28.7",
+    "@types/styled-system": "^5.1.15",
     "eslint": "^8.7.0",
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
