--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-use": "^17.3.2",
+    "sharp": "^0.29.3",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
     "swr": "^1.2.0",
     "wagmi": "^0.2.0"
   },
   "devDependencies": {
+    "@types/ioredis": "^4.28.7",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.20",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@types/ioredis": "^4.28.7",
     "@types/styled-system": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
     "eslint": "^8.7.0",
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
